--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,9 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Rust Explained"
+
+[output.html]
+git-repository-url="https://github.com/emre-ergun/mdbook-rust"
+
+[output.html.playground]
+runnable = false
