--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,7 @@ title = "Rust Explained"
 
 [output.html]
 git-repository-url="https://github.com/emre-ergun/mdbook-rust"
+no-section-label=true
 
 [output.html.playground]
 runnable = false
